added action bar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -39,6 +39,7 @@
             android:exported="false" />
         <activity
             android:name=".ui.main.MainActivity"
+            android:label=""
             android:exported="false" />
         <activity
             android:name=".ui.introduction.IntroductionActivity"
